# Multi_agent_R-D

./: .gitignore  DASHBOARD.md  README.md  analyze_results.py  config.yaml  dashboard.html  dashboard_server.py  demo.py  launch_dashboard.py  package-lock.json  pyproject.toml  quick_demo.py  requirements.txt  requirements_analysis.txt  run_demo.py  temp_config.yaml  test_rejection_fix.py
saboteur_bench/: __init__.py
src/: agent.py  agent_original_steganographic.py  cot_monitor.py  display_manager.py  llm_client.py  logger.py  main.py  message_manager.py  problems.py  scoring_system.py  simulation.py  simulation.py.backup  simulation_refactored.py
src/simulation/: __init__.py  action_handler.py  analytics.py  content_generator.py  game_controller.py  review_manager.py  utils.py
utils/: problems.yaml  prompts.py  prompts.yaml  test_runner.py  utils.py
